Most of the app working.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="fr" ng-app="numeros">
     <head>
         <title>Apprenons les chiffres !</title>
         <meta charset="utf-8">
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/flag-icon.css">        
         <link rel = "stylesheet" href = "css/style.css">
     </head>
+<!--    <body ng-controller="mainController"> -->
     <body>
         <header>
             <div id="flags">
@@ -20,26 +21,12 @@
                 <a href="#pl"><span class="flag-icon flag-icon-pl" alt = "PL"></span></a>
                 <a href="#en"><span class="flag-icon flag-icon-us" alt = "EN"></span></a>
             </div>
-            <h1 id = "page-header">Apprenons les chiffres français&nbsp;!</h1>
-            <h2 id = "wait-header">En train de chercher une voix française...</h2>
-        </header>
-        <main>
-            <div id="buttons-here">
-                <button id="button-short" disabled = "disabled" aria-label = "short number">123</button>
-                <button id="button-date" disabled = "disabled" aria-label = "date"><i class="fa fa-calendar" aria-hidden="true"></i></button>
-                <button id="button-phone" disabled = "disabled" aria-label = "phone number"><i class="fa fa-phone" aria-hidden="true"></i></button>
-            </div>
-            <form id = "answers-here">
-                <input type = "tel" id = "answer" name = "answer" placeholder = "###">
-                <button id="button-repeat" aria-label = "repeat" type = "button"><i class="fa fa-repeat" aria-hidden="true"></i></button>
-                <button id="button-submit" aria-label = "verify" type="submit"><i class="fa fa-check" aria-hidden="true"></i></button>
-            </form>
-        </main>
-        <footer>
-            <h1>Désolé, votre navigateur, paraît-il, ne soutient pas la synthèse vocale.</h1>
-            <h1>Sorry, your browser seems not to support text-to-speech.</h1>
-        </footer>        
+</header>    
+   <div ng-view></div>
     </body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://code.angularjs.org/1.5.9/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.5.9/angular-sanitize.min.js"></script>
+    <script src="https://code.angularjs.org/1.5.9/angular-route.min.js"></script>
     <script src = "js/script.js"></script>
 </html>
